--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </fieldset>
             </form>
             <div class="result">
-                <button id="botao">Caucular</button>
+                <button id="botao">Calcular</button>
                 <p id="result-text">0.00</p>
             </div>
             </div>
