--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cauculadora de média - Filipi Martins</title>
+    <title>Calculadora de média - Filipi Martins</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
 <body>
     <div class="fundo">
-        <div class="cauculadora">
+        <div class="calculadora">
             <h1>Cauculadora de Médias</h1>
             <form action="">
                 <fieldset>
