--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="fundo">
-        <div class="calculadora">
-            <h1>Cauculadora de Médias</h1>
+        <div class="cauculadora">
+            <h1>Calculadora de Médias</h1>
             <form action="">
                 <fieldset>
                     <legend><b>Notas</b></legend>
